# FIRA-Autonomous-Cars-Simulator

./: .gitmodules  README.md  packages.txt
autonomous_vehicle_nosecurity/: CMakeLists.txt  package.xml
autonomous_vehicle_nosecurity/launch/: main.launch
autonomous_vehicle_project/: CMakeLists.txt  package.xml
autonomous_vehicle_project/launch/: main.launch
autonomous_vehicle_simple/: CMakeLists.txt
autonomous_vehicle_simple/launch/: main.launch
autonomous_vehicle_teb/: CMakeLists.txt  package.xml
autonomous_vehicle_teb/launch/: main.launch  main_nosecurity.launch
avisengine_environment/: CMakeLists.txt  package.xml
avisengine_environment/launch/: track_race_simple.launch  track_urban_simple.launch  update_world.launch
avisengine_environment/meshes/: mesh_road.dae  mesh_road_intersection.dae
avisengine_environment/models/: mesh_road.dae  mesh_road_Tintersection.dae  mesh_road_corner.dae  mesh_road_straight.dae  mesh_util_sign.dae  track.sdf
avisengine_environment/scripts/: export.sh
avisengine_environment/src/: model_updater.py
avisengine_environment/urdf/: track.urdf  track.xarco
avisengine_environment/worlds/: UrbanWorld.world  world_race.world  world_urban.world  world_urban_new.world
avisengine_resources/: CMakeLists.txt  package.xml
can_sim_tc/: CMakeLists.txt
can_sim_tc/src/: CanSimNode.cpp  CanSimTc_nodelet.cpp
catvehicle_basics/catvehicle/: CMakeLists.txt
catvehicle_basics/catvehicle_gazebo/: CMakeLists.txt
catvehicle_basics/catvehicle_gps_action/: CMakeLists.txt
catvehicle_basics/catvehicle_tests/: CMakeLists.txt
catvehicle_basics/drcsim_model_resources/: CMakeLists.txt
catvehicle_basics/obstaclestopper/: CMakeLists.txt
catvehicle_basics/rviz_satellite/: CMakeLists.txt
dataspeed_can/: LICENSE  README.md  bitbucket-pipelines.yml  can_msgs_migration.md
dataspeed_can/dataspeed_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can/dataspeed_can_msg_filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can/dataspeed_can_msg_filters/include/dataspeed_can_msg_filters/: ApproximateTime.h
dataspeed_can/dataspeed_can_msg_filters/tests/: CMakeLists.txt  test.cpp
dataspeed_can/dataspeed_can_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can/dataspeed_can_msgs/bmr/: rule1.bmr  rule2.bmr
dataspeed_can/dataspeed_can_msgs/include/dataspeed_can_msgs/: CanMessage.h  CanMessageStamped.h
dataspeed_can/dataspeed_can_tools/: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml
dataspeed_can/dataspeed_can_tools/src/: CanExtractor.cpp  CanExtractor.h  DbcIterator.cpp  DbcIterator.hpp  DbcMessage.cpp  DbcMessage.hpp  DbcSignal.cpp  DbcSignal.hpp  dbc_bag.cpp  dbc_node.cpp
dataspeed_can/dataspeed_can_tools/tests/: CMakeLists.txt  Test.dbc  test_full.cpp  test_full.test  test_iterator.cpp  test_message.cpp  test_signal.cpp
dataspeed_can/dataspeed_can_usb/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can/dataspeed_can_usb/firmware/: UsbCan_EUCAN_v10.4.0.hex
dataspeed_can/dataspeed_can_usb/include/dataspeed_can_usb/: CanDriver.h  CanUsb.h  MacAddr.h  ModuleVersion.h
dataspeed_can/dataspeed_can_usb/launch/: example.launch
dataspeed_can/dataspeed_can_usb/scripts/: fw_update.bash
dataspeed_can/dataspeed_can_usb/src/: CanDriver.cpp  CanUsb.cpp  UsbCanMessages.h  node.cpp  nodelet.cpp
dataspeed_can/dataspeed_can_usb/tests/: CMakeLists.txt  test_mac_addr.cpp  test_module_version.cpp
dbw_mkz_ros/dbw_mkz/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_can/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_can/include/dbw_mkz_can/: ModuleVersion.h  PlatformMap.h  PlatformVersion.h  dispatch.h  pedal_lut.h  sonar_lut.h
dbw_mkz_ros/dbw_mkz_can/src/: DbwNode.cpp  DbwNode.h  node.cpp  nodelet.cpp
dbw_mkz_ros/dbw_mkz_description/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_gazebo/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_gui/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_joystick_demo/: CMakeLists.txt
dbw_mkz_ros/dbw_mkz_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.0.12-1.0.13/: Misc1Report.bmr
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.0.16-1.0.17/: Misc1Report.bmr  Misc1Report.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.0.17-1.1.0/: BrakeCmd.bmr  BrakeCmd.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.1.2-1.2.0/: FuelLevelReport.bmr  FuelLevelReport.saved  SteeringCmd.bmr  SteeringCmd.saved  SteeringReport.bmr  SteeringReport.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.2.0-1.2.1/: BrakeInfoReport.bmr  BrakeInfoReport.saved  BrakeReport.bmr  BrakeReport.saved  ThrottleInfoReport.bmr  ThrottleInfoReport.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.2.11-1.3.0/: BrakeReport.bmr  BrakeReport.saved  ThrottleInfoReport.bmr  ThrottleInfoReport.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.2.4-1.2.5/: Misc1Report.bmr  Misc1Report.saved
dbw_mkz_ros/dbw_mkz_msgs/bmr/1.4.0-1.4.1/: SteeringCmd.bmr  SteeringCmd.saved  ThrottleInfoReport.bmr  ThrottleInfoReport.saved
dbw_mkz_ros/dbw_mkz_msgs/msg/: BrakeCmd.msg  BrakeInfoReport.msg  BrakeReport.msg  DriverAssistReport.msg  FuelLevelReport.msg  GearNum.msg  GearReject.msg  Ignition.msg  Misc1Report.msg  QualityFactor.msg  SteeringCmd.msg  SteeringReport.msg  ThrottleInfoReport.msg  TurnSignal.msg
dbw_mkz_ros/dbw_mkz_twist_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_mkz_ros/dbw_mkz_twist_controller/cfg/: Controller.cfg
dbw_mkz_ros/dbw_mkz_twist_controller/src/: LowPass.h  PidControl.h  RadiusControl.h  TwistControllerNode.cpp  TwistControllerNode.h  YawControl.h  twist_controller_node.cpp  twist_tester.cpp
example_pkg/: CMakeLists.txt  package.xml
example_pkg/src/: drive.py  imageReceive.py
lusb/: CHANGELOG.rst  CMakeLists.txt  LICENSE  bitbucket-pipelines.yml  package.xml
lusb/include/lusb/: UsbDevice.h
lusb/src/: UsbDevice.cpp
sicktoolbox/: CMakeLists.txt
teb_navigation_demo/: CMakeLists.txt  package.xml
teb_navigation_demo/config/: base_local_planner.yaml  base_local_planner_or.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
test_pkg/: CMakeLists.txt  package.xml
(+49 files in other folders)
