<?xml version="1.0"?>
<package format="2">
  <name>dataspeed_can_msgs</name>
  <version>1.0.11</version>
  <description>
    Controller Area Network (CAN) messages
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dataspeed_can</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dataspeed_can/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
    <rosbag_migration_rule rule_file="bmr/rule1.bmr"/>
    <rosbag_migration_rule rule_file="bmr/rule2.bmr"/>
    <deprecated>
      The package dataspeed_can_msgs has been deprecated with migration to can_msgs. See https://bitbucket.org/DataspeedInc/dataspeed_can/src/default/can_msgs_migration.md
    </deprecated>
  </export>

</package>
