<?xml version="1.0"?>
<package format="2">
  <name>dataspeed_can_usb</name>
  <version>1.0.16</version>
  <description>
    Driver to interface with the Dataspeed Inc. USB CAN Tool
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dataspeed_can</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dataspeed_can/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>can_msgs</depend>
  <depend>std_msgs</depend>
  <depend>lusb</depend>

  <build_depend>roslib</build_depend> <!-- Needed for ROS_DISTRO environment variable -->

  <exec_depend>roslaunch</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
