<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_msgs</name>
  <version>1.4.0</version>
  <description>
    Drive-by-wire messages for the Lincoln MKZ
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
    <rosbag_migration_rule rule_file="bmr/1.0.2-1.0.3/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/BrakeCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/GearCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/ThrottleCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/GearReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/Misc1Report.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/SteeringReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/ThrottleReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/SteeringReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/ThrottleReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.12-1.0.13/Misc1Report.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.16-1.0.17/Misc1Report.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.17-1.1.0/BrakeCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.1.2-1.2.0/FuelLevelReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.1.2-1.2.0/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.1.2-1.2.0/SteeringReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.0-1.2.1/BrakeInfoReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.0-1.2.1/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.0-1.2.1/ThrottleInfoReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.4-1.2.5/Misc1Report.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.11-1.3.0/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.2.11-1.3.0/ThrottleInfoReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.4.0-1.4.1/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.4.0-1.4.1/ThrottleInfoReport.bmr"/>
  </export>

</package>
